--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,23 @@
+main {
+    width: 80%;
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+.album {
+    display: flex;
+    padding: 10px;
+}
+
+.albumdata {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .cover {
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
     border: 1px solid #999;
+    margin-right: 5px;
 }
