--- a/static/style.css
+++ b/static/style.css
@@ -5,9 +5,26 @@ main {
     font-family: sans-serif
 }
 
+.hidden {
+    display: none;
+}
+
+#source-links a {
+    margin-right: 8px;
+}
+
+.source {
+    margin-top: 30px;
+}
+
+.description {
+    color: #777;
+    font-size: 0.9em;
+}
+
 .album {
     display: flex;
-    padding: 10px;
+    padding: 10px 10px 10px 0;
 }
 
 .cover {
