--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,27 @@
+@font-face {
+    font-family: 'Fluxisch';
+    src: url('fonts/FluxischElse-Regular.woff') format('woff');
+    font-style: normal;
+    font-weight: normal;
+}
+
+@font-face {
+    font-family: 'Fluxisch';
+    src: url('fonts/FluxischElse-Bold.woff') format('woff');
+    font-style: normal;
+    font-weight: bold;
+}
+
 main {
+    font-family: 'Fluxisch', sans-serif;
+    font-weight: normal;
     width: 80%;
     max-width: 500px;
     margin: 0 auto;
-    font-family: sans-serif
+}
+
+h1, h2, h3, h4, h5 {
+    font-weight: bold;
 }
 
 .hidden {
