--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Chango&display=swap');
+
 @font-face {
     font-family: 'Fluxisch';
     src: url('fonts/FluxischElse-Regular.woff') format('woff');
@@ -20,7 +22,14 @@ main {
     margin: 0 auto;
 }
 
-h1, h2, h3, h4, h5 {
+h1 {
+    font-family: "Chango", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 52px;
+}
+
+h2, h3, h4, h5 {
     font-weight: bold;
 }
 
